# skku-kdt-opensearch-25

./: .gitignore  README.md  get-session-token.sh  pyproject.toml
example/devtools/: index.query  json_data_search.query
example/python/common/: config.py  opensearch.py
example/python/step1/: 0_json_data_upload.py
example/python/step2/: 0_vector_data_upload.py  1_vector_data_search.py
example/python/step3/: 0_titan_embedding_data_upload.py  1_titan_data_search.py  2_image_embedding_data_upload.py  3_image_data_search_by_image.py  4_image_data_search_by_text.py
example/python/step4/: 0_llm_invoke_image.py  1_llm_invoke_summary.py
example/python/step5/: 0_streamlit.py  1_streamlit.py
example/sample_data/: json_data.json
example/step0/: 0_check_connection.ipynb
example/step1/: 0_json_data_upload.ipynb  upload_data.query
example/step2/: 0_vector_data_upload.ipynb  1_vector_data_search.ipynb
example/step3/: 0_titan_embedding_data_upload.ipynb  1_titan_data_search.ipynb  2a_titan_image_data_upload.ipynb  2b_nova_image_data_upload.ipynb  3_image_data_search_by_image.ipynb  4_image_data_search_by_text.ipynb
example/step4/: 0_llm_invoke_image.ipynb  1_llm_invoke_summary.ipynb  2_react_agent_mcp.ipynb  opensearch_mcp_server.py
example/step5/: 0_chainlit.py  chainlit.md  search_mcp_server.py
example/step6/: README.md  setup-claude-code.sh
terraform/: README.md  main.tf  variables.tf
