[project]
name = "skku-kdt-opensearch-25"
version = "0.1.0"
description = ""
authors = [
    {name = "김한성",email = "gnidoc327@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "boto3 (>=1.38.46,<2.0.0)",
    "opensearch-py (>=2.0.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
